<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <!-- Top -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:background="@drawable/border1" >

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ConfirmTitle"
            android:textColor="#ffffff"
            android:textScaleX="1.2"
            android:typeface="sans" />
    </RelativeLayout>

    <!-- middle -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".90"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/Confirm1"
                android:textColor="#000000"
                android:typeface="sans" />

            <RelativeLayout
                android:id="@+id/menuscroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/itemconfirm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/priceconfirm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </RelativeLayout>

            <TextView
                android:id="@+id/addressconfirm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/help2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/Confirm2"
                android:textColor="#000000"
                android:typeface="sans" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/buttonholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/ordernowsms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ConfirmOrderNowButton_SMS"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/ordernowemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ConfirmOrderNowButton_EMAIL"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>